src/test/deca/context/invalid/test_error_2.7-6.deca
// Description:
//    Soulève l'erreur (2.7)
//
// Resultat:
//    Erreur contextuelle
//    Ligne 16 : On ne peut pas return void dans une méthode (règle 2.7)
//
// Historique:
//      cree le 19/01/2022

class A {

    void m() {}

    void getX(){
        return m();
    }

}

